GearsetPOC/force-app/main/default/objects/Promo__c/Promo__c.object-meta.xml
<CustomObject>
    <description>Promotion for a given Subscription. There is a number limit of promos.</description>
    <label>Promo</label>
    <nameField>
        <displayFormat>PROMO-{000000}</displayFormat>
        <label>Promo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>