GearsetPOC/force-app/main/default/objects/Promo__c/fields/Available_for__c.field-meta.xml
<CustomField>
    <fullName>Available_for__c</fullName>
    <defaultValue>&#39;All&#39;</defaultValue>
    <label>Available for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Program</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>