GearsetPOC/force-app/main/default/objects/Promo__c/fields/Code_Promo__c.field-meta.xml
<CustomField>
    <fullName>Code_Promo__c</fullName>
    <label>Code Promo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>