GearsetPOC/force-app/main/default/objects/Promo__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Promos</relationshipLabel>
    <relationshipName>Promos</relationshipName>
    <type>Lookup</type>
</CustomField>