GearsetPOC/force-app/main/default/objects/Promo__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Extra Miles</fullName>
                <isActive>false</isActive>
                <label>Extra Miles</label>
            </value>
            <value>
                <fullName>Validity Extend</fullName>
                <isActive>false</isActive>
                <label>Validity Extend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>