GearsetPOC/force-app/main/default/objects/Promo__c/fields/Number_of_related_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Number_of_related_Sub_Type__c</fullName>
    <label>Number of related Sub Type</label>
    <summaryForeignKey>Promo_with_Subscription_Type__c.Promo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>