GearsetPOC/force-app/main/default/objects/Promo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
	OR(
		AND( 
			Number_of_related_Sub_Type__c &gt; 0,
			Validity_Start_Date__c &lt;= TODAY(),
			Validity_End_Date__c &gt;= TODAY(),
			OR(
				ISBLANK(Max_Usage__c),
				Max_Usage__c &gt; Count__c
			)
		),
		AND(
			ISPICKVAL(Discount_Type__c, &#39;Validity Extend&#39;),
			Validity_Start_Date__c &lt;= TODAY(),
			Validity_End_Date__c &gt;= TODAY(),
			OR(
				ISBLANK(Max_Usage__c),
				Max_Usage__c &gt; Count__c
			)
		)
	),
	&#39;Active&#39;, 
	&#39;Inactive&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>