GearsetPOC/force-app/main/default/objects/Promo__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Promos</relationshipLabel>
    <relationshipName>Promos</relationshipName>
    <type>Lookup</type>
</CustomField>