GearsetPOC/force-app/main/default/objects/Promo__c/fields/Subscription_Category__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Category__c</fullName>
    <label>Subscription Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequent</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>