GearsetPOC/force-app/main/default/objects/Promo__c/fields/Subscription_Extend__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Extend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Extend</label>
    <type>Checkbox</type>
</CustomField>