GearsetPOC/force-app/main/default/objects/Promo__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequent 6</fullName>
            </value>
            <value>
                <fullName>Frequent 12</fullName>
            </value>
            <value>
                <fullName>Pass Premium 6</fullName>
            </value>
            <value>
                <fullName>Pass Premium 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>