GearsetPOC/force-app/main/default/objects/Promo__c/fields/TECH_eVoucher_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_eVoucher_Type__c</fullName>
    <label>eVoucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
                <default>true</default>
                <label>Discount</label>
            </value>
            <value>
                <fullName>Compensation</fullName>
                <isActive>false</isActive>
                <label>Compensation</label>
            </value>
            <value>
                <fullName>Prepaid</fullName>
                <isActive>false</isActive>
                <label>Prepaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>