GearsetPOC/force-app/main/default/objects/Promo__c/fields/TECH_New_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Subscription_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Subscription Type</label>
    <type>Checkbox</type>
</CustomField>