GearsetPOC/force-app/main/default/objects/Promo__c/fields/TECH_Range__c.field-meta.xml
<CustomField>
    <fullName>TECH_Range__c</fullName>
    <label>Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thalys</fullName>
                <default>true</default>
                <label>Thalys</label>
            </value>
            <value>
                <fullName>Izy</fullName>
                <isActive>false</isActive>
                <label>Izy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>