GearsetPOC/force-app/main/default/objects/Promo__c/fields/TECH_Starting_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_Starting_Subscription_Type__c</fullName>
    <label>Starting Subscription Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>