GearsetPOC/force-app/main/default/objects/Promo__c/validationRules/Code_Promo_must_be_16_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Code_Promo_must_be_16_characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Code_Promo__c) != 16</errorConditionFormula>
    <errorDisplayField>Code_Promo__c</errorDisplayField>
    <errorMessage>Code Promo must be exactly 16 characters.</errorMessage>
</ValidationRule>